# simpleQQbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  THIRD_PARTY_LICENSES.txt  bot.py  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
config/: models.yaml  napcat.onebot11.json  permissions.yaml  personalities.yaml
docs/superpowers/plans/: 2026-05-11-injection-defense-plan.md  2026-05-11-model-config-env-plan.md  2026-05-11-qqbot-ai-implementation.md  2026-05-17-hire-fire-private-chat-plan.md  2026-05-17-register-and-history-fix-plan.md  2026-05-17-think-chain-plan.md  2026-05-18-napcat-nonebot-deployment-plan.md  2026-05-21-one-click-packages.md  2026-05-23-model-relay-context.md
docs/superpowers/specs/: 2026-05-11-injection-defense-design.md  2026-05-11-model-config-env-design.md  2026-05-11-qqbot-ai-design.md  2026-05-17-hire-fire-private-chat-design.md  2026-05-17-register-and-history-fix-design.md  2026-05-17-think-chain-design.md  2026-05-18-napcat-nonebot-deployment-design.md  2026-05-21-one-click-packages-design.md  2026-05-23-model-relay-context-design.md
lib/: ai_core.py  config.py  context.py  db.py  errors.py  model_binding.py  permission.py  personality.py  relay.py
lib/models/: anthropic.py  base.py  factory.py  openai_compat.py
lib/tools/: search.py
scripts/: install.sh
src/plugins/chat/: __init__.py  handlers.py  router.py
tests/: conftest.py  test_context.py  test_injection_defense.py  test_search.py
