[project]
name = "qqbot-ai"
version = "0.3.0"
requires-python = ">=3.11"
dependencies = [
    "nonebot2>=2.3.0",
    "httpx>=0.27.0",
    "anthropic>=0.39.0",
    "duckduckgo_search>=7.0.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "nonebot-plugin-localstore>=0.6.0",
    "nonebot-adapter-onebot>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]
